style-fix:media query navigtion small change

--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ padding:2.5rem;
             position:fixed;
         }
         .fluid-container {
-            margin:0.5rem 10rem;
+            margin:0.5rem 4rem;
         }
     
         .navigation .container-fluid ul {
